# NeoJiLang

./: .gitignore  0.2.x.todo.md  CHANGELOG.md  Cargo.toml  README.md  build.ps1  list_update_files.ps1  output.txt  update_files_list.txt
.github/workflows/: release-build.yml
docs/: system_module.md
examples/: arithmetic_demo.njil  bubble_sort.njis  calculator.njis  comments_demo.njil  comments_demo.njis  complex_math_demo.njil  const_demo.njil  const_demo.njis  continue_demo.njis  control_flow_demo.njis  datetime_demo.njis  datetime_demo_simple.njis  env_demo.njis  exception_demo.njis  fs_demo.njis  function_demo.njil  json_nested_path_test.njis  logic_demo.njis  login_system.njis  math.njim  module_demo.njil  multi_module_demo.njil  nested_path_debug.njis  nested_path_test.njis  nested_var_test.njis  process_demo.njis  shell_demo.njis  simple.njil  sleep_demo.njis  string_operations_demo.njis  string_utils.njim  style_color_demo.njis  test_datetime.njil  test_datetime.njis  text_processor.njis  todo_list.njis  type_demo.njil  type_demo.njis  var_modes_comparison.njis  var_set_formats_test.njis
src/: error.rs  errortip.rs  interpreter.rs  lib.rs  main.rs  module.rs  njis.rs  preprocessor.rs  types.rs
src/builtin/: datetime.rs  io.rs  mod.rs  shell.rs  system.rs  tests.rs
src/statements/: arithmetic.rs  constant.rs  control_flow.rs  function_call.rs  json.rs  logic.rs  mod.rs  print.rs  return_stmt.rs  sleep.rs  string.rs  throw.rs  try_catch.rs  type_convert.rs  var.rs
src/utils/: mod.rs  path.rs  type_convert.rs
tests/: system_fs_test.njis
(+41 files in other folders)
